Cascading Change Log

2.5.5 [unreleased]

  Fixed issue where the ctor of c.t.Fields was not checking the given types for null values.

  Fixed issue where Hadoop credentials could be shared across job submissions and become corrupted
  causing j.i.EOFExceptions.

  Fixed issue where c.t.Fields#resolve() would lose type information with complex selectors.

  Added new c.f.h.p.HadoopPlanner property to disable adjacent tap removal optimization. Setting
  "cascading.multimapreduceplanner.collapseadjacentaps" to false will disable the optimization that is on by default.
  This optimization can in a few cases reduce the number of MR jobs, but without consistent type information, could
  result in a type mismatch errors during joins.

2.5.4

  Fixed an issue where c.t.h.Hfs#getChildIdentifiers() could throw an j.l.StringIndexOutOfBoundsException.

  Updated c.p.a.AggregateBy$CompositeFunction to not use the threshold in #equals or #hashCode.

  Fixed issue where a c.p.Merge could hide the streamed/accumulated nature of a stream when leading to a c.p.Group
  pipe. This could result in duplicate data passed to the c.p.GroupBy or c.p.CoGroup within a MapReduce job.

  Fixed issue where c.p.a.FirstBy only accepted a single field name.

  Updated c.t.p.PartitionCollector in c.t.p.BasePartitionTap to be public.

2.5.3

  Updated c.f.h.ProcessFlow to include missing status changes.

  Deprecated both c.t.l.TemplateTap and c.t.h.TemplateTap for the respective PartitionTap.

  Updated c.p.Pipe and c.p.SubAssembly to cache any resolved name as its own name to improve #hashCode() performance.

  Fixed issue where c.t.Fields#merge() did not honor underlying Fields type information properly.

  Fixed issue where c.t.Fields#getType() attempted to resolve position when there is no associated type information.

2.5.2

  Updated c.t.TupleEntryCollector javadoc to clarify re-use of c.t.Tuple instances.
